--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/assets/images/ozone.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Intercord</title>
+    <title>Ozone Finance</title>
 </head>
 
 <body>
